[profile.dev]
strip = true
opt-level = 1

[profile.release]
strip = true
lto = true
opt-level = 3

[profile.release.build-override]
strip = true
opt-level = 3

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["void-ripper"]
license = "LGPL 3.0"
repository = "https://github.com/void-ripper/mcriddle.git"
homepage = "https://github.com/void-ripper/mcriddle.git"
readme = "README.md"
keywords = ["p2p", "peer-to-peer", "blockchain"]
categories = ["concurrency", "network-programming"]

[workspace]
resolver = "2"
members = ["mcriddle", "mcriddle-daemon"]
exclude = ["chatomato", "questioneer"]
