[package]
name = "chatomato"
version.workspace = true
edition.workspace = true

[dependencies]
borsh = { version = "1.5.3", features = ["derive"] }
hex = "0.4.3"
indexmap = "2.6.0"
k256 = { version = "0.13.4", features = ["ecdh"] }
mcriddle = { version = "0.1.0", path = "../mcriddle" }
ratatui = "0.29.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.41.1", features = ["full"] }
