[package]
name = "mccloud-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A relay node for the mccloud network."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
mccloud = { path = "../mccloud" }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
