[package]
name = "mccloud-tester"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mccloud = { path = "../mccloud" }
askama = { version = "0.14.0", features = ["serde_json"] }
axum = "0.8.4"
indexmap = "2.10.0"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
