[package]
name = "mccloud"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library to work with the mccloud network."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
aes-gcm-siv = "0.11.1"
borsh = { version = "1.5.7", features = ["borsh-derive", "derive"] }
hashbrown = "0.15.3"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdh", "ecdsa"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
tokio = { version = "1.45.0", features = ["full"] }
tokio-socks = "0.5.2"
tracing = "0.1.41"
zstd = "0.13.3"

[dev-dependencies]
bytesize = "2.0.1"
rayon = "1.10.0"
time = "0.3.41"
