[package]
name = "mcriddle-daemon"
version.workspace = true
edition.workspace = true

[features]
default = []
ws = ["dep:tokio-tungstenite"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
mcriddle = { path = "../mcriddle" }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
