[package]
name = "mcriddle-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
mcriddle = { path = "../mcriddle" }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
