[package]
name = "mcriddle-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A relay node for the mcriddle network."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
mcriddle = { path = "../mcriddle" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
