[package]
name = "mcriddle"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library to work with the mcriddle network."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
aes = "0.8.4"
borsh = { version = "1.5.3", features = ["borsh-derive", "derive"] }
cbc = { version = "0.1.2", features = ["std"] }
hex = "0.4.3"
indexmap = "2.7.0"
k256 = { version = "0.13.4", features = ["ecdh", "ecdsa"] }
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
zstd = "0.13.2"
