[package]
name = "mcriddle"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library to work with the mcriddle network."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
aes = "0.8.4"
borsh = { version = "1.5.3", features = ["borsh-derive", "derive"] }
cbc = { version = "0.1.2", features = ["std"] }
hashbrown = "0.15.2"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdh", "ecdsa"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"], optional = true }
tokio = { version = "1.43.0", features = ["full"] }
tokio-socks = "0.5.2"
tracing = "0.1.41"
zstd = "0.13.2"

[dev-dependencies]
bytesize = "1.3.0"
rayon = "1.10.0"
time = "0.3.37"
