[package]
name = "questioneer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
hex = "0.4.3"
indexmap = "2.7.0"
mcriddle = { path = "../mcriddle" }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
